book search added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
-html static works
+<div style="height: 25%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <h1>
+        Привет мир!
+        Здесь ссылка на сваггер:
+        <a href="/swagger-ui/index.html">SWAGGER</a>
+    </h1>
+</div>
 </body>
 </html>
